fixed css for github background in contact section not aligning properly on hover

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -201,7 +201,7 @@
     margin-bottom: 0;
   }
 
-  #gmailImg:hover, .githubBG:hover, #contactMain #linkedinImg:hover { 
+  #gmailImg:hover, #contactMain .githubBG:hover, #contactMain #linkedinImg:hover { 
     border: solid 8px #1B4DFF;
     border-radius: 38px;
     margin: -8px;
